Update: Swagger Configuration

--- a/Service-Member/src/main/resources/application-dev.properties
+++ b/Service-Member/src/main/resources/application-dev.properties
@@ -31,3 +31,6 @@ spring.data.redis.timeout=60000
 logging.level.org.springframework.cache.*=TRACE
 logging.level.org.springframework=INFO
 logging.level.org.springframework.web=DEBUG
+
+# Doc
+springdoc.swagger-ui.path=/swagger-ui.html
