--- a/Service-Member/src/main/resources/application-dev.properties
+++ b/Service-Member/src/main/resources/application-dev.properties
@@ -33,4 +33,5 @@ logging.level.org.springframework=INFO
 logging.level.org.springframework.web=DEBUG
 
 # Doc
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api/v1/member/v3/api-docs
+springdoc.swagger-ui.path=/api/v1/member/swagger-ui.html
