--- a/Service-Member/src/main/resources/application.properties
+++ b/Service-Member/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Service-Member
 
+spring.graphql.graphiql.enabled=true
 server.port=9001
 
 # MySQL Datasource
@@ -36,5 +37,7 @@ logging.level.org.springframework.web=DEBUG
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
 
 # Doc
-springdoc.api-docs.path=/api/v1/member/v3/api-docs
-springdoc.swagger-ui.path=/api/v1/member/swagger-ui.html
+spring.graphql.graphiql.path=/api/v1/members/graphiql
+
+# Url Request
+spring.graphql.path=/api/v1/members
