--- a/Service-Member/src/main/resources/application-dev.properties
+++ b/Service-Member/src/main/resources/application-dev.properties
@@ -32,6 +32,13 @@ logging.level.org.springframework.cache.*=TRACE
 logging.level.org.springframework=INFO
 logging.level.org.springframework.web=DEBUG
 
+spring.mvc.trailing-slash.matching=false
+
 # Doc
-springdoc.api-docs.path=/api/v1/member/v3/api-docs
-springdoc.swagger-ui.path=/api/v1/member/swagger-ui.html
+spring.graphql.graphiql.enabled=true
+server.servlet.context-path=/api/v1/members
+spring.graphql.path=/graphql
+spring.graphql.graphiql.path=/graphiql
+
+# Agar bisa kenali header proxy (X-Forwarded-*)
+server.forward-headers-strategy=native
