--- a/Service-Member/src/main/resources/application-prod.properties
+++ b/Service-Member/src/main/resources/application-prod.properties
@@ -33,5 +33,8 @@ logging.level.org.springframework=INFO
 logging.level.org.springframework.web=DEBUG
 
 # Doc
-springdoc.api-docs.path=/api/v1/member/v3/api-docs
-springdoc.swagger-ui.path=/api/v1/member/swagger-ui.html
+spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.path=/api/v1/members/graphiql
+
+# Url Request
+spring.graphql.path=/api/v1/members
