Update: update Properties

--- a/Service-Member/src/main/resources/application-prod.properties
+++ b/Service-Member/src/main/resources/application-prod.properties
@@ -34,7 +34,9 @@ logging.level.org.springframework.web=DEBUG
 
 # Doc
 spring.graphql.graphiql.enabled=true
-spring.graphql.graphiql.path=/api/v1/members/graphiql
+server.servlet.context-path=/api/v1/members
+spring.graphql.path=/graphql
+spring.graphql.graphiql.path=/graphiql
 
-# Url Request
-spring.graphql.path=/api/v1/members
+# Agar bisa kenali header proxy (X-Forwarded-*)
+server.forward-headers-strategy=native
