--- a/Service-Member/src/main/resources/application.properties
+++ b/Service-Member/src/main/resources/application.properties
@@ -37,7 +37,6 @@ logging.level.org.springframework.web=DEBUG
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:default}
 
 # Doc
-spring.graphql.graphiql.path=/api/v1/members/graphiql
-
-# Url Request
-spring.graphql.path=/api/v1/members
+server.servlet.context-path=/api/v1/members
+spring.graphql.path=/graphql
+spring.graphql.graphiql.path=/graphiql
