Update: update compose and add update status

--- a/Service-Member/pom.xml
+++ b/Service-Member/pom.xml
@@ -79,6 +79,10 @@
 			<artifactId>graphql-java-extended-scalars</artifactId>
 			<version>21.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
